src/tests/snapshots/cendol__tests__pp_has_include_macro__has_include_literal_protection.snap
---
source: src/tests/pp_has_include_macro.rs
assertion_line: 46
expression: tokens
---
- kind: Identifier
  text: int
- kind: Identifier
  text: z
- kind: Assign
  text: "="
- kind: Number
  text: "1"
- kind: Semicolon
  text: ;
- kind: Identifier
  text: int
- kind: Identifier
  text: w
- kind: Assign
  text: "="
- kind: Number
  text: "0"
- kind: Semicolon
  text: ;
