src/tests/snapshots/cendol__tests__pp_has_include_macro__has_include_macro.snap
---
source: src/tests/pp_has_include_macro.rs
assertion_line: 21
expression: tokens
---
- kind: Identifier
  text: int
- kind: Identifier
  text: x
- kind: Assign
  text: "="
- kind: Number
  text: "1"
- kind: Semicolon
  text: ;
- kind: Identifier
  text: int
- kind: Identifier
  text: y
- kind: Assign
  text: "="
- kind: Number
  text: "1"
- kind: Semicolon
  text: ;
