src/tests/snapshots/cendol__tests__pp_has_include_macro__has_include_no_expansion_inside.snap
---
source: src/tests/pp_has_include_macro.rs
expression: tokens
---
- kind: Identifier
  text: int
- kind: Identifier
  text: z
- kind: Assign
  text: "="
- kind: Number
  text: "0"
- kind: Semicolon
  text: ;
